se creo e inicio el componente de registro

--- a/src/modules/home/views/header/header.scss
+++ b/src/modules/home/views/header/header.scss
@@ -15,13 +15,13 @@
     }
 
     &__container {
-        padding: 30px;
+        padding: 40px;
         box-sizing: border-box;
         min-height: 100px;
         width: 100%;
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         justify-content: space-between;
     }
 }
