creacion de componente input para poder ser reutilizable

--- a/src/modules/home/components/headers/form-register.scss
+++ b/src/modules/home/components/headers/form-register.scss
@@ -6,6 +6,7 @@
     border-radius: 32px;
     height: 599px;
     position: relative;
+    margin-top: 40px;
 
     &__cyber-days-sello {
         position: absolute;
