--- a/src/modules/home/components/headers/form-register.scss
+++ b/src/modules/home/components/headers/form-register.scss
@@ -8,9 +8,88 @@
     position: relative;
     margin-top: 40px;
 
+    padding: 30px 45px;
+
     &__cyber-days-sello {
         position: absolute;
         top: -48px;
         right: -12px;
+    }
+
+    &__complete-info {
+        position: relative;
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 32px;
+        color: #D43E36;
+        margin-bottom: 40px;
+
+        &__img {
+            position: absolute;
+            bottom: -15px;
+            left: 10px;
+        }
+    }
+
+    &__group-input {
+        display: flex;
+        flex-direction: row;
+        column-gap: 15px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+
+        div {
+            width: 260px;
+        }
+    }
+
+    &__checkbox {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        color: #9D9D9D;
+        font-size: 16px;
+        line-height: 19px;
+        margin-bottom: 10px;
+
+
+        :nth-child(1) {
+            padding-right: 10px;
+            box-sizing: border-box;
+        }
+
+
+        &__resalt {
+            font-weight: 700;
+            padding-left: 5px;
+            box-sizing: border-box;
+            color: #1A36A8;
+        }
+    }
+
+    &__btn-register {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    &__message {
+        font-size: 14px;
+        line-height: 19px;
+        font-weight: 400;
+        text-align: center;
+        margin-top: 20px;
+        color: #595959;
+        padding: 0 35px;
+        box-sizing: border-box;
+
+        span {
+            font-weight: 700;
+            color: #D43E36;
+        }
     }
 }
