--- a/src/modules/home/views/cyber-day/cyber-day.scss
+++ b/src/modules/home/views/cyber-day/cyber-day.scss
@@ -46,4 +46,12 @@
         align-items: center;
         justify-content: space-around;
     }
+
+    &__logo-mas-uno{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        margin-top: 50px; 
+    }
 }
