actualizacion de color

--- a/src/modules/home/components/headers/form-register.scss
+++ b/src/modules/home/components/headers/form-register.scss
@@ -66,7 +66,7 @@
             font-weight: 700;
             padding-left: 5px;
             box-sizing: border-box;
-            color: #1A36A8;
+            color: var(--mu-color-primary);
         }
     }
 
