--- a/src/modules/home/views/cyber-day/cyber-day.scss
+++ b/src/modules/home/views/cyber-day/cyber-day.scss
@@ -15,7 +15,7 @@
         font-weight: 700;
         font-size: 32px;
         line-height: 43px;
-        color: #1A36A8;
+        color: var(--mu-color-primary);
         margin-top: 60px;
 
         img {
