--- a/src/modules/home/views/footer/footer.scss
+++ b/src/modules/home/views/footer/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #1A36A8;
+    background-color: var(--mu-color-primary);
     color: #ffffff;
     display: flex;
     flex-direction: row;
