--- a/src/shared/components/captcha/u-captcha.scss
+++ b/src/shared/components/captcha/u-captcha.scss
@@ -8,7 +8,7 @@
         position: absolute;
         background-color: #ffffff;
         border-radius: 5px;
-        border: 1px solid #1A36A8;
+        border: 1px solid var(--mu-color-primary);
         bottom: 48px;
         right: 0px;
         padding: 3px;
@@ -23,7 +23,7 @@
 
         &__btn-reload {
             cursor: pointer;
-            background-color: #1A36A8;
+            background-color: var(--mu-color-primary);
             border-radius: 5px;
             width: 35px; 
             height: 35px;
@@ -45,8 +45,8 @@
         max-width: 10px;
         max-height: 10px;
         background-image:
-            linear-gradient(to bottom right, transparent 50%, #1A36A8 0),
-            linear-gradient(to top right, #1A36A8 50%, transparent 0);
+            linear-gradient(to bottom right, transparent 50%, var(--mu-color-primary) 0),
+            linear-gradient(to top right, var(--mu-color-primary) 50%, transparent 0);
         background-size: 50% 100%;
         background-repeat: no-repeat;
         background-position: left, right;
@@ -95,8 +95,8 @@
         width: 100%;
 
         &__active {
-            color: #1A36A8;
-            border: 1px solid #1A36A8;
+            color: var(--mu-color-primary);
+            border: 1px solid var(--mu-color-primary);
         }
     }
 }
