--- a/src/modules/home/components/slider/detail-tecnology.scss
+++ b/src/modules/home/components/slider/detail-tecnology.scss
@@ -36,7 +36,7 @@
         }
 
         &__item-active {
-            background-color: #1A36A8;
+            background-color: var(--mu-color-primary);
         }
 
         &__item-inactive {
