--- a/src/shared/components/Button/u-button.scss
+++ b/src/shared/components/Button/u-button.scss
@@ -16,7 +16,7 @@
     }
 
     &__enabled {
-        background-color: #1A36A8;
+        background-color: var(--mu-color-primary);
 
         &:hover {
             cursor: pointer;
