--- a/src/shared/components/separator-circle/u-separator-circle.scss
+++ b/src/shared/components/separator-circle/u-separator-circle.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 3px;
     width: 100%;
-    background-color: #1A36A8;
+    background-color: var(--mu-color-primary);
     position: relative;
 
     img {
